# pyPneuMesh

./: .gitignore  .polyscope.ini  GA.py  README.md  RenderOption_2021-04-13-13-06-26.json  RenderOption_2021-07-03-21-00-02.json  ScreenCamera_2022-11-17-03-47-48.json  geneticAlgorithm.py  imgui.ini  model.py  modelSetup.py  optimizer.py  plot.py  requirements.txt  targetFuncs.py  targets.py  test.npy  test.txt  train.py  utils.py
ANOVA/: dataSets.npy
CPneumesh/: CMakeLists.txt  Model.cpp  Model.h  main.cpp  test.py  wrapper.cpp
CPneumesh/pybind11/: noxfile.py
CPneumesh/src/: add.cpp  greet.cpp
bpyPneuMesh/: pneumeshPlugin.py  pneumeshPluginColorful.py  pneumeshPluginStatic.py  pneumeshPlugin_082623.py  renderOnly.py
bpyPneuMesh/data/: helmet.simparam.npy  helmet_0.trussparam.npy  helmet_1.trussparam.npy  helmet_back.trussparam.npy
cppPneuMesh/: CMakeCache 2.txt  CMakeCache.txt  Makefile  Makefile 2  cmake_install 2.cmake
cppPneuMesh/glad/: Makefile  cmake_install 2.cmake
cppPneuMesh/glfw/: Makefile 2  cmake_install 2.cmake
cppPneuMesh/imgui/: Makefile  cmake_install 2.cmake
cppPneuMesh/pybind11/: Makefile 2  cmake_install 2.cmake
data/: a_different_trussformer.json  bean_mesh.json  bridge.json  bridge_simple_web.json  config.json  config_0.json  config_nodirectional.json  cube_mesh.json  fox.json  foxIn.json  foxIn_all_active.json  fullsphere.json  half_helmet.json  helmet.json  helmet2.json  hemisphere_web.json  lobster.json  lobster.trussparam.npy  lobster2.json  lobster3.json  lobster4_126.json  lobster5_156.json  lobster6_115.json  lobsterIn_all_active.json  lobsterIn_noport.json  lobster_sym.json  lobster_sym_walk.json  lobster_walk.trussparam.npy  model_setting_large.json  moo_helmet.json  pill-bug.json  pill-bug_sym.json  pillBugIn.json  pillBugIn_0.656-1.0_623-6:46:18.json  pillBugIn_1.1399526381513332-0.999999944611321_623-6:47:54.json  sphere.json  sphere_mesh.json  sphere_original.json  sphere_simple.json  sphere_simple_mesh.json  (+17 more)
examples/: bridge_c4.py  bullet.py  exportAnimation.py  foxForwardNoDir.py  foxLowerBodyWalk.py  foxLowerBodyWalk_longer.py  foxLowerBodyWalk_longer_c16.py  foxLowerBodyWalk_longer_c4.py  foxLowerBodyWalk_longer_c8.py  lobsterForwardGrab.py  lobsterForwardGrab_c16.py  lobsterForwardGrab_c2.py  lobsterForwardGrab_c3.py  lobsterForwardGrab_c4.py  lobsterForwardGrab_c4_100_extinction.py  lobsterForwardGrab_c4_50_extinction.py  lobsterForwardGrab_c4_noextinction.py  lobsterForwardGrab_c8.py  lobsterForwardNoDir.py  mergePillBugForwardLeftRight.py  pillBugForward.py  pillBugForwardLeft.py  pillBugForwardLeftRight.py  pillBugForwardNoDir.py  pillBugForward_c16.py  pillBugForward_c2.py  pillBugForward_c4.py  pillBugForward_c8.py  saveActions.py  showActions.py  showActionsFromHistory.py  showHistory.py  show_helmet_graph.py  show_sphere.py  show_table.py  show_table_graph.py  table_c4.py  table_c8.py  test.py  testSpeed.py  (+21 more)
examples/plot/: outputlog_0  outputlog_1  outputlog_2  plot.py  plot2.py
ghPneuMesh/: jointGenerator.gh
output/: frames_.json  gen-0_fit--0.00173884  gen-0_fit--0.00881878  gen-0_fit--0.01001519  gen-0_fit--0.01028703  gen-0_fit--0.03575293  gen-0_fit-0.00038785  gen-0_fit-0.00049606  gen-0_fit-0.00050709  gen-0_fit-0.00076640  gen-0_fit-0.00095283  gen-0_fit-0.00141446  gen-0_fit-0.00223816  gen-0_fit-0.00268921  gen-10_fit-0.00095283  gen-20_fit-0.00095283  gen-30_fit-0.00101972  gen-40_fit-0.00101972  gen-50_fit-0.00101972  gen-60_fit-0.00112767  gen-70_fit-0.00129178  gen-80_fit-0.00129178  gen-90_fit-0.00145343  out.json
output/GA_1012-18:2:26/: iPool_1  iPool_2  iPool_3  iPool_4  iPool_5
output/GA_1113-2:23:44/: iPool_1
output/GA_1117-12:12:23/: iPool_1  iPool_2
output/GA_1121-20:40:37/: iPool_0  iPool_1  iPool_2
output/GA_531-8-36-53/: iPool_537  iPool_538  iPool_580
output/GA_613-4:56:20/: iPool_1  iPool_10  iPool_11  iPool_12  iPool_13  iPool_14  iPool_15  iPool_16  iPool_17  iPool_18  iPool_19  iPool_2  iPool_20  iPool_21  iPool_22  iPool_23  iPool_24  iPool_25  iPool_26  iPool_27  iPool_28  iPool_29  iPool_3  iPool_30  iPool_31  iPool_4  iPool_5  iPool_6  iPool_7  iPool_8  iPool_9
pyPneuMesh/: FullGraph.py  GA.py  Graph.py  HalfGraph.py  JointGenerator.py  MOO.py  Model.py  MultiMotion.py  MultiObjective.py  subObjectives.py  utils.py
scripts/: convertHistory.py  convertNpy.py  exportDesignToNpy.py  json2npy.py  plotCurve.py  plotData.py  plotDistribution2D.py  plotDistribution3D.py  plotPerformance.py
scripts/assembleMotions/: main.py
scripts/generateJoint_2022-12-18/: jointGeneratorResult_duplicate.3dm.rhl
scripts/generateJoint_pillbug_2023_08_16/: pillbug.json  test.py
scripts/helmet/: main.py
scripts/tableExample/: main.py
scripts/tableStifferPassiveBeam/: trainTable.py
scripts/testGA/: testGA.py
scripts/testGraph/: testGraph.py
scripts/testJointGenerator/: test.py
scripts/testLobster/: testLobster.py
scripts/testMOO/: testMOO.py
scripts/testModel/: testModel.py
scripts/testMultiMotion/: testMultiMotion.py
scripts/testMultiObjective/: testMultiObjective.py
scripts/trainHelmet/: trainHelmet.py
scripts/trainHelmet4_static/: trainHelmet.py
scripts/trainLobster/: trainLobster.py
scripts/trainPillBug_2023_10_23_no_intersection_forward_lower/: generateJoint.py  jointGeneratorPillbug.gh  trainPillbug.py
scripts/trainPillBug_2023_10_23_on_a_previous_forward_lowering_gene/: trainPillbug.py
scripts/trainPillbug_2023_10_21/: generateJoint.py  jointGeneratorPillbug.gh  readme.txt  test.py  trainPillbug.py
scripts/trainPillbug_2023_10_22/: trainPillbug.py
src/: FullGraph.py  GA.py  Graph.py  HalfGraph.py  MOO.py  Model.py  MultiMotion.py  MultiObjective.py  subObjectives.py  utils.py
test/: test.py  test_lobster.py  test_simulator.py
test/data/: F.npy  (+9 more)
trained_models/: PongNoFrameskip-v4.pt  turn_left_0612.pt
utils/: GA.py  constraints.py  geometry.py  getCriterion.py  halfGraph.py  mesh.py  mmo.py  mmoCriterion.py  mmoSetting.py  model.py  modelInterface.py  moo.py  mooCriterion.py  objectives.py  truss.py  trussEnv.py  visualizer.py
(+2019 files in other folders)
